[gd_scene load_steps=46 format=4 uid="uid://rgq4vnq1ni2s"]

[ext_resource type="Texture2D" uid="uid://crehfu7sum0aj" path="res://sprites/scenetiles.png" id="1_h3ynu"]
[ext_resource type="Texture2D" uid="uid://tus0p4rif" path="res://sprites/gamesprites.png" id="1_hcd81"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_vclcn"]
[ext_resource type="Texture2D" uid="uid://byjfwimvjioil" path="res://sprites/background.png" id="1_w33cx"]
[ext_resource type="Script" path="res://scripts/npc1.gd" id="5_241ha"]
[ext_resource type="Script" path="res://scripts/npc_2.gd" id="6_1n1nd"]
[ext_resource type="Script" path="res://scripts/npc_3.gd" id="7_kxnyv"]
[ext_resource type="Script" path="res://scripts/questioner.gd" id="8_6oeaw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7mdfh"]
texture = ExtResource("1_w33cx")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a61wl"]
texture = ExtResource("1_h3ynu")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_3glca"]
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_7mdfh")
sources/3 = SubResource("TileSetAtlasSource_a61wl")

[sub_resource type="AtlasTexture" id="AtlasTexture_bfis5"]
atlas = ExtResource("1_hcd81")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc34f"]
atlas = ExtResource("1_hcd81")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpom6"]
atlas = ExtResource("1_hcd81")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubf7d"]
atlas = ExtResource("1_hcd81")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7x1r"]
atlas = ExtResource("1_hcd81")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpndy"]
atlas = ExtResource("1_hcd81")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yftjw"]
atlas = ExtResource("1_hcd81")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0nft"]
atlas = ExtResource("1_hcd81")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdmuj"]
atlas = ExtResource("1_hcd81")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i2ow"]
atlas = ExtResource("1_hcd81")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_igfjv"]
atlas = ExtResource("1_hcd81")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_niwx4"]
atlas = ExtResource("1_hcd81")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_61m82"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfis5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc34f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpom6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubf7d")
}],
"loop": true,
"name": &"mc_backward_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7x1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpndy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yftjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0nft")
}],
"loop": true,
"name": &"mc_forward_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdmuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i2ow")
}],
"loop": true,
"name": &"mc_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igfjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niwx4")
}],
"loop": true,
"name": &"mc_stare",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpps5"]
size = Vector2(14, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_47d7l"]
atlas = ExtResource("1_hcd81")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qj6i"]
atlas = ExtResource("1_hcd81")
region = Rect2(16, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_koye0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_47d7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qj6i")
}],
"loop": true,
"name": &"npc_1_idle",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xc7h6"]
size = Vector2(12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5whrp"]
atlas = ExtResource("1_hcd81")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ad15"]
atlas = ExtResource("1_hcd81")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_53ksp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5whrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ad15")
}],
"loop": true,
"name": &"npc_2_idle",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ead0"]
size = Vector2(12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m08ys"]
atlas = ExtResource("1_hcd81")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivdh3"]
atlas = ExtResource("1_hcd81")
region = Rect2(16, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cv2xy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m08ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivdh3")
}],
"loop": true,
"name": &"npc_3_idle",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpauc"]
size = Vector2(14, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf75u"]
atlas = ExtResource("1_hcd81")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t17yj"]
atlas = ExtResource("1_hcd81")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyx5s"]
atlas = ExtResource("1_hcd81")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkd0s"]
atlas = ExtResource("1_hcd81")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6c5w"]
atlas = ExtResource("1_hcd81")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkmj5"]
atlas = ExtResource("1_hcd81")
region = Rect2(48, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1gpc0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf75u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t17yj")
}],
"loop": true,
"name": &"q_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyx5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkd0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6c5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkmj5")
}],
"loop": true,
"name": &"q_walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38hpv"]
size = Vector2(14, 16)

[node name="Game" type="Node2D"]
position = Vector2(86, 0)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -85.0
offset_right = 394.0
offset_bottom = 126.0
texture = ExtResource("1_w33cx")
expand_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(28, 46)
tile_map_data = PackedByteArray("AAD+/wUAAwAAAAEAAAD//wUAAwAAAAEAAAAAAAUAAwAAAAEAAAABAAUAAwAAAAEAAAACAAUAAwAAAAEAAAADAAUAAwAAAAEAAAAEAAUAAwAAAAEAAAAFAAUAAwAAAAEAAAAGAAUAAwAAAAEAAAAHAAUAAwAAAAEAAAAIAAUAAwAAAAEAAAAJAAUAAwAAAAEAAAAKAAUAAwABAAEAAAALAAUAAwAAAAEAAAAMAAUAAwABAAEAAAANAAUAAwAAAAEAAAAOAAUAAwAAAAEAAAAPAAUAAwAAAAEAAAAQAAUAAwAAAAEAAAARAAUAAwAAAAEAAAD+/wYAAwACAAEAAAD//wYAAwACAAEAAAAAAAYAAwACAAEAAAABAAYAAwACAAEAAAACAAYAAwACAAEAAAADAAYAAwACAAEAAAAEAAYAAwACAAEAAAAFAAYAAwACAAEAAAAGAAYAAwACAAEAAAAHAAYAAwACAAEAAAAIAAYAAwACAAEAAAAJAAYAAwACAAEAAAARAAYAAwACAAEAAAAQAAYAAwACAAEAAAAPAAYAAwACAAEAAAAOAAYAAwACAAEAAAANAAYAAwACAAEAAAAMAAYAAwACAAEAAAALAAYAAwACAAEAAAAKAAYAAwACAAEAAAASAAUAAwABAAEAAAASAAYAAwADAAEAAAACAAQAAwAAAAMAAAADAAQAAwABAAMAAAAGAAQAAwAAAAMAAAAHAAQAAwABAAMAAAAKAAQAAwAAAAMAAAALAAQAAwABAAMAAAD9/wUAAwAAAAEAAAD8/wUAAwAAAAEAAAD7/wUAAwAAAAEAAAD6/wUAAwAAAAEAAAD5/wUAAwAAAAEAAAATAAUAAwAAAAEAAAAUAAUAAwAAAAEAAAAVAAUAAwAAAAEAAAAWAAUAAwAAAAEAAAATAAYAAwACAAEAAAAUAAYAAwACAAEAAAAVAAYAAwACAAEAAAAWAAYAAwACAAEAAAD9/wYAAwACAAEAAAD8/wYAAwACAAEAAAD7/wYAAwACAAEAAAD6/wYAAwACAAEAAAD5/wYAAwACAAEAAAA=")
tile_set = SubResource("TileSet_3glca")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(12, 118)
script = ExtResource("1_vclcn")

[node name="Animation" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_61m82")
animation = &"mc_idle"
frame_progress = 0.346188

[node name="Collision" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_hpps5")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-1, -15)
zoom = Vector2(2, 2)

[node name="Npc1" type="CharacterBody2D" parent="."]
position = Vector2(95, 118)
disable_mode = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("5_241ha")

[node name="Animation" type="AnimatedSprite2D" parent="Npc1"]
sprite_frames = SubResource("SpriteFrames_koye0")
animation = &"npc_1_idle"

[node name="Collision" type="CollisionShape2D" parent="Npc1"]
shape = SubResource("RectangleShape2D_xc7h6")

[node name="Npc2" type="CharacterBody2D" parent="."]
position = Vector2(161, 118)
collision_layer = 2
collision_mask = 2
script = ExtResource("6_1n1nd")

[node name="Animation" type="AnimatedSprite2D" parent="Npc2"]
sprite_frames = SubResource("SpriteFrames_53ksp")
animation = &"npc_2_idle"

[node name="Collision" type="CollisionShape2D" parent="Npc2"]
shape = SubResource("RectangleShape2D_3ead0")

[node name="Npc3" type="CharacterBody2D" parent="."]
position = Vector2(225, 118)
disable_mode = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("7_kxnyv")

[node name="Animation" type="AnimatedSprite2D" parent="Npc3"]
sprite_frames = SubResource("SpriteFrames_cv2xy")
animation = &"npc_3_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Npc3"]
shape = SubResource("RectangleShape2D_dpauc")

[node name="Questioner" type="CharacterBody2D" parent="."]
position = Vector2(283, 118)
script = ExtResource("8_6oeaw")

[node name="Animation" type="AnimatedSprite2D" parent="Questioner"]
sprite_frames = SubResource("SpriteFrames_1gpc0")
animation = &"q_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Questioner"]
shape = SubResource("RectangleShape2D_38hpv")
